
* Improvements:

Improve maximum sent keys to ZENG/ZENG Online
Improved Windows timing and any other system using SDL video driver. Now uses SDL Timing
Improved Mac timing by using native timer
Improved Watermark Logo: can be shown only when loading/saving, can change colors when loading/saving
Improved File Selector: allow to use path to a a FAT mounted image on all cases

Improved AY Player:
- Allow to load playlist
- Allow to save playlist (full playlist or just marked files)
- Allow to increase track length (for some tracks with incorrect length)
- Added direct functions to next/previous track/file
- Show tenths of a second on song length and time elapsed
- Better shuffle algorithm
- Fixed silence detection when playback paused

Improved Sinclair QL emulation:
- Allow to increase Sinclair QL RAM size
- Allow to load and save QL screen files
- Added QL Screen file previews on File Selector

Improved ZX Vision:
- Allow to hide minimized windows
- Show, with a dot, when an icon is an open window but minimized
- Keep ZEsarUX window size proportions (disallow different zoom x/y) by default
- Delete cursor when sending a window to background
- Allow to show short text for icons on ZX Desktop
- Added rzx files support for file selector: can be expanded (to z80 snap file), show file previews, convert to SCR, convert to Z80, use as ZX Desktop background

Improved Debug CPU:
- Show view number inside the window and not in the window title
- Added option to enable/disable all breakpoints
- Fixed moving cursor up when address near 0

* Fixes:

Fixed semaphore locking on Windows
Fixed cpu usage calculation when footer is disabled
Fixed setting esxdos handler root dir when loading a .nex file without path from command line

----


ZEsarUX 12 - Bubble Bobble edition. 16 January 2025

* New things added:

Added ZX Microdrive emulation on ZX Spectrum: that includes: